force-app/main/default/objects/LightningRecordEditFormObject__c/LightningRecordEditFormObject__c.object-meta.xml
<CustomObject>
    <label>LightningRecordEditFormObject</label>
    <nameField>
        <label>LightningRecordEditFormObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LightningRecordEditFormObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>