force-app/main/default/objects/LightningRecordEditFormObject__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LightningRecordEditFormObject</relationshipLabel>
    <relationshipName>LightningRecordEditFormObject</relationshipName>
    <type>Lookup</type>
</CustomField>