force-app/main/default/objects/LightningRecordEditFormObject__c/fields/NRS__c.field-meta.xml
<CustomField>
    <fullName>NRS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Part of the National Response Services.</inlineHelpText>
    <label>NRS</label>
    <type>Checkbox</type>
</CustomField>