force-app/main/default/objects/LightningRecordEditFormObject__c/fields/NRS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>NRS_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NRS Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LightningRecordEditFormObject</relationshipName>
    <type>Lookup</type>
</CustomField>